kubernetes/apps/home-assistant/zigbee2mqtt/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-proxy
      namespace: kube-system
      sectionName: https
  hostnames:
    - zigbee2mqtt.jetersen.dev
  rules:
    - backendRefs:
        - name: zigbee2mqtt-app
          port: 8080
